fix sidebar, fix popup overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,13 @@ html {
 .layoutEdit .editItem.relative:hover{
 
 }
+.movieSlider{
+  position: relative;
+  z-index: 1;
+}
+.movieSlider:hover{
+  z-index: 2;
+}
 .movieSlider .slick-arrow:before, .movieSlider .slick-arrow:after{display: none !important;}
 .movieSlider .slick-arrow{
   z-index: 2;
@@ -58,6 +65,9 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.movieSlider .slick-arrow>svg{
+  width: 100%;
 }
 .movieSlider:hover .slick-arrow{
   opacity:1;
@@ -72,7 +82,7 @@ html {
   position: relative;
 }
 .movieCard>.absolute{
-  z-index: 0;
+  /* z-index: 0; */
   /* width:20vw; */
   width: 130%;
   max-width: 100vw;
